--- a/public/css/index.css
+++ b/public/css/index.css
@@ -8,7 +8,7 @@ header {
     align-items: center;
 }
 h1 {
-    padding-left: 2vw;
+    padding-left: 4vw;
 }
 nav {
     padding-right: 2vw;
@@ -31,7 +31,6 @@ body {
 }
 .new {
     font-size: 1.4vw;
-    color: #CCFF99;
     margin: 2vw auto;
     width: 10%;
     border: solid 2px #FF3300;
@@ -43,6 +42,7 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 40%;
+    width: 45%;
     padding: 3vh 4vw;
+    border-radius: 10px;
 }
